--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             alt="Logo" class="h-[50px] w-[50px] md:h-[75px] md:w-[75px]">
                     </div>
                     <div class="ml-[20px] md:ml-[60px] space-x-3 text-[15px] md:text-[20px]">
-                        <a href="../Home" class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Home</a>
+                        <a href="../index.html" class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Home</a>
                         <a href="../About" class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">About</a>
                         <a href="../Products" class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Product</a>
                         <a href="../Gallery"class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Gallery</a>
