Change the Files

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Home/Logo.png?updatedAt=1750564733315"
                             alt="Logo" class="h-[50px] w-[50px] md:h-[75px] md:w-[75px]">
                     </div>
-                    <div class="ml-[20px] md:ml-[60px] space-x-3 text-[15px] md:text-[20px]">
+                    <div class="ml-[6px] md:ml-[60px] space-x-1 md:space-x-3 text-[10px] md:text-[20px]">
                         <a href="../index.html" class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Home</a>
                         <a href="../About" class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">About</a>
                         <a href="../Products" class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Product</a>
@@ -54,10 +54,10 @@
             <div class="w-[90%] mx-auto grid grid-cols md:grid-cols-2">
                 <div class="flex flex-row justify-center  items-center">
                     <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Home/Taste%20of%20tn.jpg?updatedAt=1750560157153"
-                        alt="" class="h-[300px] w-[300px] lg:h-[450px] lg:w-[450px]">
+                        alt="" class="h-[300px] w-[300px] md:h-[400px] md:w-[400px] lg:h-[450px] lg:w-[450px]">
                 </div>
                 <div>
-                    <p class="text-[16px] md:text-[28px] leading-[20px] md:leading-[32px] font-normal p-2"> Muthumani Pickles, established on May 28, 2019, in Mukkudal, Tamil Nadu, embodies the essence of
+                    <p class="text-[16px] md:text-[25px] leading-[20px] md:leading-[28px] font-normal p-2"> Muthumani Pickles, established on May 28, 2019, in Mukkudal, Tamil Nadu, embodies the essence of
                         traditional Indian pickle-making. Founded by Packia Selvan and Muthumani, this family-run
                         business is committed to preserving India's culinary heritage. <br><br>
 
@@ -82,20 +82,20 @@
                 <div class="flex flex-row justify-center items-center gap-8">
                     <div class="relative">
                         <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Home/Pickle.png?updatedAt=1750560284053"
-                            alt="" class="h-[200px] w-[200px] md:h-[300px] md:w-[300px] rounded-full">
+                            alt="" class="h-[160px] w-[200px] md:h-[300px] md:w-[300px] rounded-full">
                         <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Home/Pickles%20bg.png?updatedAt=1750560999175"
                             alt="" class="absolute bottom-2">
                         <p
-                            class="text-white absolute font-semibold bottom-7 left-[70px] text-[20px] leading-[20px] md:bottom-10  md:text-[27px] md:left-[100px]">
+                            class="text-white absolute font-semibold bottom-4 left-[40px] text-[20px] leading-[20px] md:bottom-10  md:text-[27px] md:left-[100px]">
                             Pickles</p>
                     </div>
                     <div class="relative">
                         <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Home/Turmeric%20Powder.png?updatedAt=1750561046558"
-                            alt="" class="h-[200px] w-[200px] md:h-[300px] md:w-[300px] rounded-full">
+                            alt="" class="h-[160px] w-[200px] md:h-[300px] md:w-[300px] rounded-full">
                         <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Home/Pickles%20bg.png?updatedAt=1750560999175"
                             alt="" class="absolute bottom-3">
                         <p
-                            class="text-white absolute font-semibold bottom-7 left-[30px] text-[18px] leading-[20px] md:bottom-11 md:text-[23px] md:left-[60px]">
+                            class="text-white absolute font-semibold bottom-5 left-[25px] text-[13px] leading-[20px] md:bottom-11 md:text-[23px] md:left-[60px]">
                             Turmeric Powder</p>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
     <section class="py-10">
         <div class="2xl:container mx-auto space-y-5">
             <div class="w-[90%] mx-auto grid grid-cols">
-                <h1 class="text-[30px] leading-[28px] font-bold text-black text-center p-2 ">What Our Clients Say</h1>
+                <h1 class=" text-[25px] leading-[28px] md:text-[30px] md:leading-[28px] font-bold text-black text-center p-2 ">What Our Clients Say</h1>
             </div>
             <div class="w-[90%] mx-auto grid grid-cols">
                 <div class="flex flex-row justify-around items-center">
@@ -151,10 +151,10 @@
                         <path
                             d="M380.6 81.7c7.9 15.8 1.5 35-14.3 42.9L103.6 256 366.3 387.4c15.8 7.9 22.2 27.1 14.3 42.9s-27.1 22.2-42.9 14.3l-320-160C6.8 279.2 0 268.1 0 256s6.8-23.2 17.7-28.6l320-160c15.8-7.9 35-1.5 42.9 14.3z" />
                     </svg>
-                    <div class="bg-green-600 h-[120px] w-[350px] md:w-[450px] font-[Pacifico]">
-                        <p class="text-[15px] leading-[20px] font-medium text-white text-end p-2">"Great quality pickles
-                            with natural ingredients <br>Reminds me of homemade pickles." </p>
-                        <p class="text-[15px] leading-[18px] font-medium text-white text-end p-2">- Vimalesh, <br>
+                    <div class="bg-green-600 h-[100px] md:h-[120px] w-[200px] md:w-[450px] font-[Pacifico]">
+                        <p class="text-[10px] md:text-[15px] leading-[13px] md:leading-[18px] font-medium text-white text-end p-2">"Great quality pickles
+                            with natural ingredients<br>Reminds me of homemade pickles." </p>
+                        <p class="text-[10px] md:text-[15px] leading-[18px] font-medium text-white text-end p-2">- Vimalesh, <br>
                             Mukkodal.</p>
                     </div>
                     <svg class="h-[30px] w-[30px] font-extrabold" xmlns="http://www.w3.org/2000/svg"
@@ -169,44 +169,44 @@
     <!-- Address -->
     <section class="bg-[#b31312]">
         <div class="2xl:container mx-auto space-y-5">
-            <div class="w-[90%] mx-auto grid grid-cols-2 p-10 gap-2">
+            <div class="w-[90%] mx-auto grid grid-cols-2 p-5 md:p-10 gap-2">
                 <div class="flex flex-row justify-start items-center">
                     <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Home/Map.png?updatedAt=1750560540450"
-                        alt="" class="h-[250px] w-[250px] md:h-[400px] md:w-[400px]">
+                        alt="" class="h-[200px] w-[190px] md:h-[400px] md:w-[400px]">
                 </div>
                 <div class="space-y-3 md:space-y-6">
                     <div
-                        class="flex flex-row justify-start items-center gap-5 bg-white p-3 w-[230px] md:w-[400px] md:h-[150px] rounded-md ">
+                        class="flex flex-row justify-start items-center gap-5 bg-white p-2 md:p-3 w-[170px] md:w-[400px] md:h-[150px] rounded-md ">
                         <svg class="h-[20px] w-[15px] " xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                             <path
                                 d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
                         </svg>
-                        <p class="text-[15px] md:text-[23px] leading-[20px] md:leading-[28px] font-normal ">12/2,
+                        <p class="text-[13px] md:text-[23px] leading-[17px] md:leading-[28px] font-normal ">12/2,
                             Thiyagarajar Street,<br>
                             Mukkudal, Tirunelveli,<br>Tamil Nadu,627 601.</p>
                     </div>
                     <div
-                        class="flex flex-row justify-start items-center bg-black text-white w-[230px] md:w-[400px] rounded-tl-full rounded-bl-full">
+                        class="flex flex-row justify-start items-center bg-black text-white w-[170px] md:w-[400px] rounded-tl-full rounded-bl-full">
                         <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-phone-icon lucide-phone text-red-600 bg-white rounded-full p-2 font-bold md:h-[60px] md:w-[60px] md:p-4">
                             <path
                                 d="M13.832 16.568a1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 6.392 6.384" />
                         </svg>
-                        <p class="text-[13px] p-1 md:p-4 md:text-[25px] leading-[15px] font-normal text-[#fff]">
+                        <p class="text-[10px] p-1 md:p-4 md:text-[25px] leading-[10px] font-normal text-[#fff]">
                             9025957223 |
                             9442256790</p>
                     </div>
                     <div
-                        class="flex flex-row justify-start items-center bg-black text-white w-[230px] md:w-[400px] rounded-tl-full rounded-bl-full">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none"
+                        class="flex flex-row justify-start items-center bg-black text-white w-[170px] md:w-[400px] rounded-tl-full rounded-bl-full">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24" fill="none"
                             stroke="#af1870" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-mail-icon lucide-mail  bg-white rounded-full p-[5px] font-bold md:h-[60px] md:w-[60px] md:p-4">
                             <path d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7" />
                             <rect x="2" y="4" width="20" height="16" rx="2" />
                         </svg>
-                        <p class=" text-[13px] p-1 md:p-3 md:text-[20px] leading-[10px] font-normal text-[#fff]">
+                        <p class=" text-[10px] p-1 md:p-3 md:text-[20px] leading-[10px] font-normal text-[#fff]">
                             muthumanipickles@gmail.com</p>
                     </div>
                     <div class="flex flex-row justify-start items-center gap-4">
