--- a/Contact/index.html
+++ b/Contact/index.html
@@ -16,7 +16,7 @@
 
 <body class="font-[Poppines]">
     <!-- Navbar -->
-    <section>
+     <section>
         <div class="2xl:container mx-auto">
             <div class="w-[90%] mx-auto grid grid-cols-1">
                 <div class="flex flex-row justify-between items-center">
@@ -24,16 +24,12 @@
                         <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Home/Logo.png?updatedAt=1750564733315"
                             alt="Logo" class="h-[50px] w-[50px] md:h-[75px] md:w-[75px]">
                     </div>
-                    <div class="ml-[20px] md:ml-[60px] space-x-3 text-[15px] md:text-[20px] ">
+                    <div class="ml-[6px] md:ml-[60px] space-x-1 md:space-x-3 text-[10px] md:text-[20px]">
                         <a href="../index.html" class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Home</a>
-                        <a href="../About"
-                            class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">About</a>
-                        <a href="../Products"
-                            class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Product</a>
-                        <a href="../Gallery"
-                            class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Gallery</a>
-                        <a href="../Contact"
-                            class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Contact</a>
+                        <a href="../About" class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">About</a>
+                        <a href="../Products" class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Product</a>
+                        <a href="../Gallery"class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Gallery</a>
+                        <a href="../Contact"class="hover:bg-red-700 p-2 hover:text-[#fff] rounded-md">Contact</a>
 
                     </div>
                 </div>
@@ -41,26 +37,29 @@
         </div>
     </section>
     <!-- Form -->
-    <section class="py-5">
-        <div class="2xl:container">
+    <section class="py-4">
+        <div class="2xl:container space-y-5">
+            <div class="w-[90%] mx-auto grid grid-cols">
+                <h2 class="text-[25px] leading-[26px] font-bold text-center">Place Order</h2>
+            </div>
             <div class="w-[90%] mx-auto grid grid-cols">
                 <div class="h-[450px] md:h-[550px] bg-[#008000] text-center rounded-md">
                     <form action="" class=" w-[90%] mx-auto p-3 md:p-10 space-y-6 md:space-y-12">
-                        <div class="flex flex-row justify-around items-center md:space-x-2">
-                            <input type="text" class="border-2 p-1 w-[150px] h- md:w-[250px] " placeholder="Name">
-                            <input type="number" class="border-2 p-1 w-[150px] md:w-[250px] " placeholder="Mobile No">
+                        <div class="flex flex-row justify-around items-center space-x-2  md:space-x-2">
+                            <input type="text" class="border-2 p-1 w-[140px] h- md:w-[250px] " placeholder="Name">
+                            <input type="number" class="border-2 p-1 w-[140px] md:w-[250px] " placeholder="Mobile No">
                         </div>
-                        <div class="flex flex-row justify-around items-center md:space-x-2">
-                            <input type="email" class="border-2 p-1 w-[150px] md:w-[250px] " placeholder="Email ID">
-                            <input type="text" class="border-2 p-1 w-[150px] md:w-[250px] " placeholder="Address">
+                        <div class="flex flex-row justify-around items-center space-x-2 md:space-x-2">
+                            <input type="email" class="border-2 p-1 w-[140px] md:w-[250px] " placeholder="Email ID">
+                            <input type="text" class="border-2 p-1 w-[140px] md:w-[250px] " placeholder="Address">
                         </div>
-                        <div class="flex flex-row justify-around items-center md:space-x-2">
-                            <input type="text" class="border-2 p-1 w-[150px] md:w-[250px] "
+                        <div class="flex flex-row justify-around items-center space-x-2  md:space-x-2">
+                            <input type="text" class="border-2 p-1 w-[140px] md:w-[250px] "
                                 placeholder="Select Product">
-                            <input type="text" class="border-2 p-1 w-[150px] md:w-[250px] " placeholder="Quality">
+                            <input type="text" class="border-2 p-1 w-[140px] md:w-[250px] " placeholder="Quality">
                         </div>
                         <div>
-                            <input type="text" name="" placeholder="Message" class="h-[150px] w-[300px] md:w-[600px]">
+                            <input type="text" name="" placeholder="Message" class="h-[150px] w-[280px] md:w-[600px]">
                         </div>
                         <div class="">
                             <button class="bg-black text-white p-2 rounded-md text-end">Submit</button>
@@ -75,7 +74,7 @@
         <div class="2xl:container mx-auto">
             <div class="w-[90%] mx-auto grid grid-cols-1">
                 <div >
-                    <p class="text-[20px] leading-[25px] font-normal text-start text-[#008000] md:w-[800px]">Dear Customers ,<br>
+                    <p class="text-[18px] leading-[23px] font-normal text-start text-[#008000] md:w-[800px]">Dear Customers ,<br>
                         We would love to hear from your - your feedback, suggestions and anything you want to know about
                         our products, we are ready to give our best products.
                         Happy shopping! <br><br>
@@ -90,44 +89,44 @@
     <!-- Address -->
     <section class="bg-[#b31312]">
         <div class="2xl:container mx-auto space-y-5">
-            <div class="w-[90%] mx-auto grid grid-cols-2 p-10 gap-2">
+            <div class="w-[90%] mx-auto grid grid-cols-2 p-5 md:p-10 gap-2">
                 <div class="flex flex-row justify-start items-center">
                     <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Home/Map.png?updatedAt=1750560540450"
-                        alt="" class="h-[250px] w-[250px] md:h-[400px] md:w-[400px]">
+                        alt="" class="h-[200px] w-[190px] md:h-[400px] md:w-[400px]">
                 </div>
                 <div class="space-y-3 md:space-y-6">
                     <div
-                        class="flex flex-row justify-start items-center gap-5 bg-white p-3 w-[230px] md:w-[400px] md:h-[150px] rounded-md ">
+                        class="flex flex-row justify-start items-center gap-5 bg-white p-2 md:p-3 w-[170px] md:w-[400px] md:h-[150px] rounded-md ">
                         <svg class="h-[20px] w-[15px] " xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                             <path
                                 d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
                         </svg>
-                        <p class="text-[15px] md:text-[23px] leading-[20px] md:leading-[28px] font-normal ">12/2,
+                        <p class="text-[13px] md:text-[23px] leading-[17px] md:leading-[28px] font-normal ">12/2,
                             Thiyagarajar Street,<br>
                             Mukkudal, Tirunelveli,<br>Tamil Nadu,627 601.</p>
                     </div>
                     <div
-                        class="flex flex-row justify-start items-center bg-black text-white w-[230px] md:w-[400px] rounded-tl-full rounded-bl-full">
+                        class="flex flex-row justify-start items-center bg-black text-white w-[170px] md:w-[400px] rounded-tl-full rounded-bl-full">
                         <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-phone-icon lucide-phone text-red-600 bg-white rounded-full p-2 font-bold md:h-[60px] md:w-[60px] md:p-4">
                             <path
                                 d="M13.832 16.568a1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 6.392 6.384" />
                         </svg>
-                        <p class="text-[13px] p-1 md:p-4 md:text-[25px] leading-[15px] font-normal text-[#fff]">
+                        <p class="text-[10px] p-1 md:p-4 md:text-[25px] leading-[10px] font-normal text-[#fff]">
                             9025957223 |
                             9442256790</p>
                     </div>
                     <div
-                        class="flex flex-row justify-start items-center bg-black text-white w-[230px] md:w-[400px] rounded-tl-full rounded-bl-full">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none"
+                        class="flex flex-row justify-start items-center bg-black text-white w-[170px] md:w-[400px] rounded-tl-full rounded-bl-full">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24" fill="none"
                             stroke="#af1870" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-mail-icon lucide-mail  bg-white rounded-full p-[5px] font-bold md:h-[60px] md:w-[60px] md:p-4">
                             <path d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7" />
                             <rect x="2" y="4" width="20" height="16" rx="2" />
                         </svg>
-                        <p class=" text-[13px] p-1 md:p-3 md:text-[20px] leading-[10px] font-normal text-[#fff]">
+                        <p class=" text-[10px] p-1 md:p-3 md:text-[20px] leading-[10px] font-normal text-[#fff]">
                             muthumanipickles@gmail.com</p>
                     </div>
                     <div class="flex flex-row justify-start items-center gap-4">
@@ -164,11 +163,8 @@
 
     </section>
     <footer>
-        <p
-            class="bg-black text-white text-center text-[16px] md:text-[20px] leading-[22px] md:leading-[29px] font-normal p-2">
-            ©2024, Muthumani Pickles. All Rights Reserved.</p>
+        <p class="bg-black text-white text-center text-[16px] md:text-[20px] leading-[22px] md:leading-[29px] font-normal p-2">©2024, Muthumani Pickles. All Rights Reserved.</p>
     </footer>
-
 </body>
 
 </html>
