--- a/Products/index.html
+++ b/Products/index.html
@@ -57,7 +57,7 @@
                 <div class="fade-in-bottom">
                     <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Products/Pickle3.jpg?updatedAt=1750561638423"
                         alt="" class="h-[150px] w-[150px] md:h-[200px] md:w-[200px]">
-                    <p class="bg-[#008000]  p-1 w-[150px] md:w-[200px] text-center text-[10px] md:text-[20px] text-[#fff]"> Kathambam Pickle ₹7 </p>
+                    <p class="bg-[#008000]  p-1 w-[150px] md:w-[200px] text-center text-[10px] md:text-[15px] lg:text-[20px] text-[#fff]"> Kathambam Pickle ₹7 </p>
                 </div>
                 <div class="fade-in-bottom">
                     <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Products/Pickle4.jpg?updatedAt=1750561638423"
@@ -80,7 +80,7 @@
                 <div class="fade-in-bottom">
                     <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Products/Pickle7.jpg?updatedAt=1750561638423"
                         alt="" class="h-[150px] w-[150px] md:h-[200px] md:w-[200px]">
-                    <p class="bg-[#008000]  p-1 w-[150px] md:w-[200px] text-[10px] md:text-[20px] text-center text-[#fff]">Kathambam Pickle   ₹50 </p>
+                    <p class="bg-[#008000]  p-1 w-[150px] md:w-[200px] text-[10px] md:text-[15px] lg:text-[20px] text-center text-[#fff]">Kathambam Pickle  ₹50 </p>
                 </div>
                 <div class="fade-in-bottom">
                     <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Products/Pickle8.jpg?updatedAt=1750561638423"
