Change the About page

--- a/About/index.html
+++ b/About/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="w-[90%] mx-auto grid grid-cols md:grid-cols-2">
                 <div class="flex flex-row justify-center items-center">
-                    <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/About/Man.png?updatedAt=1750561184593"
+                    <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/About/Male%20Image.jpg?updatedAt=1750918407470"
                         alt="" class="h-[300px] w-[250px] lg:h-[400px] lg:w-[350px] rounded-lg shadow-2xl fade-in-left" >
                 </div>
                 <div>
@@ -74,7 +74,7 @@
         <div class="2xl:container mx-auto">
             <div class="w-[90%] mx-auto grid grid-cols md:grid-cols-2">
                 <div class="flex flex-row justify-center items-center md:order-2">
-                    <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/About/Women.png?updatedAt=1750561183603"
+                    <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/About/female%20img.png?updatedAt=1750918407450"
                         alt="" class="fade-in-right h-[300px] w-[250px] lg:h-[400px] lg:w-[350px] rounded-lg shadow-2xl">
                 </div>
                 <div>
